--- a/style.css
+++ b/style.css
@@ -1,12 +1,34 @@
-#main-container{
-    display: flex;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body {
+    font-family: "Inter", system-ui;
+    overflow-x: hidden;
+    width: 100%;
+    background-color: black;
+    color: white;
+    /* max-width: max-content; */
+    /* margin: auto; */
+}
+h1{
+    text-align: center;
+    margin: 50px;
+}
+#main-container {
+    display: flex;
+    flex-direction: column;
+}
+
 #quiz {
+    flex: 1 1 460px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     padding: 50px;
     border-radius: 5px;
-    /* margin: auto; */
+    width: 100%;
 }
 
 #quiz:hover {
@@ -25,32 +47,53 @@
     margin-top: 20px;
 }
 
-.button {
+#button {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     padding: 30px;
     border-radius: 5px;
 }
 
-.button #next {
+#button #next {
     margin: 20px;
     padding: 5px;
     font-size: 16px;
 }
 
-.button #skip {
+#button #skip {
     margin: 20px;
     padding: 5px;
     font-size: 16px;
 }
 
-.button #finalSubmit {
+#button #finalSubmit {
     margin: 20px;
     padding: 5px;
     font-size: 16px;
 }
 
-.circle{
-    border-radius: 100%;
-    border: 2px solid black;
+.circle {
+    width: 100px;
+    height: 100px;
+    background-color: rgb(187, 187, 243);
+    border-radius: 50%;
+}
+
+#timer {
+    width: 200px;
+    height: 200px;
+    background-color: rgb(187, 187, 243);
+    border-radius: 50%;
+    text-align: center;
+    line-height: 200px;
+}
+
+#ques-time {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.countdown {
+    margin: auto 100px;
 }
